--- a/test2/tutorial.ipynb
+++ b/test2/tutorial.ipynb
@@ -198,7 +198,7 @@
     {
       "cell_type": "code",
       "source": [
-        "!wget --user=\"Yes\" --password=\"I will\" \"http://venus.hum.nagoya-u.ac.jp/nice-download/NICER1_3_2.zip\" -O /content/dep_collocation_tutorial/NICER/NICER1_3_2.zip"
+        "!wget --user=\"xxx\" --password=\"xxx\" \"http://venus.hum.nagoya-u.ac.jp/nice-download/NICER1_3_2.zip\" -O /content/dep_collocation_tutorial/NICER/NICER1_3_2.zip"
       ],
       "metadata": {
         "id": "AtXbSOwIFHe5"
